# quality_checker

./: .gitignore  CMakeLists.txt  README.md
res/: NAND3_X2.glp
src/: CMakeLists.txt  Checker.cpp  Checker.h  debug.h  design.cpp  design.h  epeChecker.cpp  epeChecker.h  exception.h  lithosimWrapper.cpp  lithosimWrapper.h  main.cpp  shape.cpp  shape.h
